invisible left side of history-tip was preventing further panning to the past, fix that

--- a/web/gui/dashboard.css
+++ b/web/gui/dashboard.css
@@ -746,10 +746,12 @@ body {
     margin-right: 25px;
     direction: rtl;
     overflow: hidden;
+    pointer-events: none;
 }
 
 .dygraph__history-tip-content {
     display: inline-block;
     white-space: nowrap;
     direction: ltr;
+    pointer-events: auto;
 }
