--- a/web/gui/dashboard.slate.css
+++ b/web/gui/dashboard.slate.css
@@ -764,10 +764,12 @@ code {
     margin-right: 25px;
     direction: rtl;
     overflow: hidden;
+    pointer-events: none;
 }
 
 .dygraph__history-tip-content {
     display: inline-block;
     white-space: nowrap;
     direction: ltr;
+    pointer-events: auto;
 }
